--- a/Tracking/AlphaTracker/train_yolo/darknet/Makefile
+++ b/Tracking/AlphaTracker/train_yolo/darknet/Makefile
@@ -7,17 +7,17 @@ DEBUG=0
 
 # CUDA architecture setting, please uncomment the following lines: 
 # ARCH= -gencode arch=compute_20,code=[sm_20,sm_21] \ 
-# 	  -gencode arch=compute_30,code=sm_30 \ 
-# 	  -gencode arch=compute_35,code=sm_35 \
-#       -gencode arch=compute_50,code=[sm_50,compute_50] \
-#       -gencode arch=compute_52,code=[sm_52,compute_52] \
-# 	  -gencode arch=compute_60,code=sm_60 \
-# 	  -gencode arch=compute_61,code=[sm_61,compute_61] \
-# 	  -gencode arch=compute_62,code=sm_62 \
-# 	  -gencode arch=compute_70,code=sm_70 \
-# 	  -gencode arch=compute_75,code=sm_75 \
-# 	  -gencode arch=compute_80,code=sm_80 \
-# 	  -gencode arch=compute_86,code=sm_86 
+ARCH= -gencode arch=compute_30,code=sm_30 \
+	  -gencode arch=compute_35,code=sm_35 \
+      -gencode arch=compute_50,code=[sm_50,compute_50] \
+      -gencode arch=compute_52,code=[sm_52,compute_52] \
+	  -gencode arch=compute_60,code=sm_60 \
+	  -gencode arch=compute_61,code=[sm_61,compute_61] \
+	  -gencode arch=compute_62,code=sm_62 \
+	  -gencode arch=compute_70,code=sm_70
+#   -gencode arch=compute_75,code=sm_75 \
+#   -gencode arch=compute_80,code=sm_80 \
+#   -gencode arch=compute_86,code=sm_86 
 
 # Then comment some lines according to your CUDA version:
 # If CUDA < 6.0, comment the *_50 through *_86 lines for compatibility
@@ -31,15 +31,15 @@ DEBUG=0
 
 # Example for CUDA 11.1
 # Please uncomment the followings it does not match your version
-ARCH= -gencode arch=compute_35,code=sm_35 \
-      -gencode arch=compute_50,code=[sm_50,compute_50] \
-      -gencode arch=compute_52,code=[sm_52,compute_52] \
-	  -gencode arch=compute_60,code=sm_60 \
-	  -gencode arch=compute_61,code=[sm_61,compute_61] \
-	  -gencode arch=compute_62,code=sm_62 \
-	  -gencode arch=compute_70,code=sm_70 \
-	  -gencode arch=compute_75,code=sm_75 \
-	  -gencode arch=compute_80,code=sm_80
+# ARCH= -gencode arch=compute_35,code=sm_35 \
+#       -gencode arch=compute_50,code=[sm_50,compute_50] \
+#       -gencode arch=compute_52,code=[sm_52,compute_52] \
+# 	  -gencode arch=compute_60,code=sm_60 \
+# 	  -gencode arch=compute_61,code=[sm_61,compute_61] \
+# 	  -gencode arch=compute_62,code=sm_62 \
+# 	  -gencode arch=compute_70,code=sm_70 \
+# 	  -gencode arch=compute_75,code=sm_75 \
+# 	  -gencode arch=compute_80,code=sm_80
 
 VPATH=./src/:./examples
 SLIB=libdarknet.so
